# sync-it

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/api-gateway/: pyproject.toml
services/api-gateway/src/: dependencies.py  main.py
services/api-gateway/src/clients/: __init__.py  proxy.py
services/api-gateway/src/core/: config.py
services/gpt-api/: Dockerfile  docker-compose.yml  pyproject.toml
services/gpt-api/src/: main.py  schemas.py  service.py  utils.py
services/gpt-api/src/api/v1/: __init__.py  completion.py
services/gpt-api/src/core/: config.py
services/gpt-api/src/services/: gpt.py
services/parser-service/: Dockerfile  Makefile  pyproject.toml
services/parser-service/src/: main.py
services/telegram-api/: Dockerfile  docker-compose.yml  pyproject.toml
services/telegram-api/src/: main.py  schemas.py  utils.py
services/telegram-api/src/api/: health.py
services/telegram-api/src/api/v1/: __init__.py  channel_messages.py  schemas.py
services/telegram-api/src/clients/: schemas.py  telegram.py
services/telegram-api/src/core/: config.py
services/telegram-api/src/parsers/: telegram.py
services/telegram-api/src/services/: channel_messages.py
services/telegram-bot/: pyproject.toml
services/telegram-bot/src/: commands.py  exceptions.py  main.py  schemas.py  schemas_bot.py  unitofwork.py
services/telegram-bot/src/callbacks/: main.py  noop.py  preference.py  preferences.py  skill.py  vacancy.py
services/telegram-bot/src/celery_app/: app.py
services/telegram-bot/src/clients/: __init__.py  base.py  grades.py  profession.py  protocols.py  schemas.py  skills.py  vacancy.py  work_formats.py
services/telegram-bot/src/commands/: __init__.py  commands.py
services/telegram-bot/src/core/: __init__.py  config.py  loader.py
services/telegram-bot/src/database/migrations/: env.py
services/telegram-bot/src/database/models/: __init__.py  base.py  enums.py  user.py  user_preference.py
services/telegram-bot/src/database/services/: __init__.py  user.py
services/telegram-bot/src/handlers/: __init__.py  faq.py  menu.py  noop.py  preferences.py  skills.py  start.py  support.py  update_preferences.py  update_skills.py  vacancies.py  whoami.py
services/telegram-bot/src/keyboard/: buttons.py
services/telegram-bot/src/keyboard/inline/: main.py  preferences.py  skills.py  update_skills.py  vacancies.py
services/telegram-bot/src/middlewares/: __init__.py  answer_callback.py  auth.py  database.py  logging.py  service.py  throttling.py
services/telegram-bot/src/repositories/: __init__.py  user.py  user_preference.py
services/telegram-bot/src/schemas/: user.py  user_preference.py
services/telegram-bot/src/services/: __init__.py  user.py  user_preference.py
services/telegram-bot/src/setup/: __init__.py  lifespan.py  polling.py  webhook.py
services/telegram-bot/src/states/: preferences.py
services/telegram-bot/src/tasks/: __init__.py  process_resume.py  schemas.py
services/telegram-bot/src/utils/: clients.py  enums.py  formatters.py  message.py
services/telegram-bot/src/utils/extractors/: __init__.py  extractor.py
services/telegram-bot/src/utils/readers/: __init__.py  abstract.py  enums.py  pdf.py  txt.py
services/vacancy-parser/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
services/vacancy-parser/src/: main.py  schemas.py  schemas_old.py  serializers.py  unitofwork.py  utils.py
services/vacancy-parser/src/api/: dependencies.py  health.py
services/vacancy-parser/src/api/v1/: __init__.py  schemas.py  vacancies.py
services/vacancy-parser/src/celery_app/: __init__.py  app.py  beat.py  config.py
services/vacancy-parser/src/clients/: profession.py  schemas.py  telegram.py
services/vacancy-parser/src/clients/head_hunter/: __init__.py  enums.py  head_hunter.py  schemas.py
services/vacancy-parser/src/constants/: fingerprint.py  telegram.py
services/vacancy-parser/src/core/: config.py
services/vacancy-parser/src/database/: models.py
services/vacancy-parser/src/database/migrations/: env.py
services/vacancy-parser/src/database/models/: __init__.py  base.py  enums.py  source.py
services/vacancy-parser/src/database/services/: __init__.py  source.py  telegram_vacancy.py
services/vacancy-parser/src/parsers/: __init__.py  base.py  head_hunter.py  schemas.py  telegram.py
services/vacancy-parser/src/repositories/: __init__.py  source.py
services/vacancy-parser/src/repositories/vacancy/: __init__.py  abstract.py  base.py  head_hunter.py  telegram.py  vacancy.py
services/vacancy-parser/src/schemas/: source.py  vacancy.py
services/vacancy-parser/src/seeds/: __init__.py  source.py
services/vacancy-parser/src/services/: __init__.py  source.py  telegram_messages.py  vacancy.py
services/vacancy-parser/src/services/http/: __init__.py  telegram.py  (+1 more)
services/vacancy-parser/src/tasks/: __init__.py  example.py  load_vacancies.py  vacancies.py
services/vacancy-processor/: Dockerfile  docker-compose.yml  pyproject.toml
services/vacancy-processor/src/: main.py  schemas.py  schemas_old.py  serializers.py  unitofwork.py
services/vacancy-processor/src/api/: __init__.py  depedencies.py
services/vacancy-processor/src/celery_app/: app.py  beat.py
services/vacancy-processor/src/clients/: __init__.py  gpt.py  schemas.py  vacancy.py
services/vacancy-processor/src/core/: __init__.py  config.py
services/vacancy-processor/src/database/: enums.py
services/vacancy-processor/src/repositories/: __init__.py  grade.py  profession.py  skill.py  vacancy.py  work_format.py
services/vacancy-processor/src/schemas/: grade.py  profession.py  skill.py  vacancy.py  work_format.py
services/vacancy-processor/src/seeds/: __init__.py  grade.py  profession.py  skill.py  work_format.py
services/vacancy-processor/src/services/: __init__.py  grade.py  http.py  profession.py  prompter.py  skill.py  vacancy.py  work_format.py
services/vacancy-processor/src/tasks/: __init__.py  vacancies.py
services/vacancy-processor/src/utils/: extractor.py  processor.py  prompter.py
(+230 files in other folders)
