[project]
name = "sync-it"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pydantic>=2.11.7", # for mypy plugin
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["libs", "services"]

[tool.uv.workspace]
members = [
    "libs/common/environment",
    "libs/common/logger",
    "libs/common/database",
    "libs/common/redis",
    "libs/common/gateway",
    "services/api-gateway",
    "services/gpt-api",
    "services/telegram-api",
    "services/vacancy-parser",
    "services/vacancy-processor",
]


[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["I", "D", "DOC", "TD", "FIX001", "FIX002", "ANN401", "CPY001", "COM812", "EM", "TRY003", "RUF001", "RUF002", "RUF003", "PLR0913", "PLR0917"]
extend-exclude = ["**/database/migrations/versions"]

[tool.mypy]
mypy_path = [
    "libs",
    "services/api-gateway/src",
    "services/gpt-api/src",
    "services/telegram-api/src",
    "services/vacancy-parser/src",
    "services/vacancy-processor/src",
]
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin" # fixme maybe sqlalchemy doesn't work
incremental = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
explicit_package_bases = true

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
force_sort_within_sections = true
float_to_top = true
