[project]
name = "gpt-api"
dynamic = ["version"]
dependencies = [
    "g4f>=0.5.4.5",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "syncit-core",
    "logger-lib",
    "environment-lib",
]

[tool.uv.sources]
syncit-core = { workspace = true }
logger-lib = { workspace = true }
environment-lib = { workspace = true }
