[project]
name = "parser-service"
version = "0.1.0"
description = "Vacancy parser service"
requires-python = "==3.13.4"
dependencies = [
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["I", "D", "DOC", "CPY", "COM812"]

[tool.mypy]
plugins = "pydantic.mypy"
incremental = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
force_sort_within_sections = true
float_to_top = true
