[project]
name = "telegram-bot"
dynamic = ["version"]
dependencies = [
    "aiogram>=3.20.0.post0",
    "database-lib",
    "logger-lib",
    "syncit-core",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "hupper>=1.12.1",
]

[tool.uv.sources]
syncit-core = { workspace = true }
logger-lib = { workspace = true }
database-lib = { workspace = true }
