[project]
name = "vacancy-parser"
dynamic = ["version"]
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.115.13",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "hupper>=1.12.1",
]
