[project]
name = "vacancy-processor"
dynamic = ["version"]
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "hupper>=1.12.1",
]
