[project]
name = "vacancy-processor"
dynamic = ["version"]
dependencies = [
    "celery>=5.5.3",
    "database-lib",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "logger-lib",
    "redis-lib",
    "syncit-core",
    "uvicorn[standard]>=0.34.3",
]

[tool.uv.sources]
syncit-core = { workspace = true }
logger-lib = { workspace = true }
database-lib = { workspace = true }
redis-lib = { workspace = true }
